--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wdio/allure-reporter": "^7.7.3",
     "@wdio/cli": "^7.7.4",
     "@wdio/local-runner": "^7.7.4",
     "@wdio/mocha-framework": "^7.7.4",
